Ask for which properties to add from external class

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -157,9 +157,11 @@
 <div translate>Add properties from super class</div>
 <div translate>Add properties from scope class</div>
 <div translate>Add properties from profile class</div>
+<div translate>Add properties from external class</div>
 <div translate>Do you want to add following properties from super class?</div>
 <div translate>Do you want to add following properties from scope class?</div>
 <div translate>Do you want to add following properties from profile class?</div>
+<div translate>Do you want to add following properties from external class?</div>
 <div translate>Not required by model</div>
 <div translate>Cannot require profile</div>
 <div translate>Shapes are not allowed</div>
