External predicate manual input for specialized class properties

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -191,6 +191,8 @@
 <div translate>Self reference not allowed</div>
 <div translate>Invalid ID</div>
 <div translate>External class not found</div>
+<div translate>External predicate not found</div>
+<div translate>External predicate is of wrong type</div>
 <div translate>Property identifier</div>
 <div translate>Default value</div>
 <div translate>Allowed values</div>
