--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -193,11 +193,19 @@
 <div translate>External class not found</div>
 <div translate>External predicate not found</div>
 <div translate>External predicate is of wrong type</div>
-<div translate>Property identifier</div>
+<div translate>Property id</div>
+<div translate>Property label</div>
+<div translate>Predicate type</div>
 <div translate>Default value</div>
 <div translate>Allowed values</div>
 <div translate>Input</div>
 <div translate>Fixed value</div>
 <div translate>Defined by</div>
+<div translate>Defined by library</div>
+<div translate>Defined by profile</div>
 <div translate>Homepage</div>
 <div translate>Title</div>
+<div translate>Concept id</div>
+<div translate>Concept label</div>
+<div translate>Vocabulary id</div>
+
