Show info for editable if defined
Closes #268

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -10,10 +10,7 @@
 <div translate>suggest</div>
 <div translate>suggestion</div>
 <div translate>and create new</div>
-<div translate>Example</div>
-<div translate>Value class</div>
 <div translate>Use</div>
-<div translate>State</div>
 <div translate>Unstable</div>
 <div translate>Draft</div>
 <div translate>Recommendation</div>
@@ -57,21 +54,6 @@
 <div translate>Delete association from this library</div>
 <div translate>Delete association from this profile</div>
 <div translate>Association list</div>
-<div translate>Id</div>
-<div translate>Class id</div>
-<div translate>Shape id</div>
-<div translate>Attribute id</div>
-<div translate>Association id</div>
-<div translate>Name</div>
-<div translate>Range</div>
-<div translate>Type</div>
-<div translate>Is defined by</div>
-<div translate>Superclass</div>
-<div translate>Specialized from class</div>
-<div translate>Superassociation</div>
-<div translate>Superattribute</div>
-<div translate>Namespace</div>
-<div translate>Prefix</div>
 <div translate>Choose class</div>
 <div translate>Choose attribute</div>
 <div translate>Choose association</div>
@@ -83,13 +65,6 @@
 <div translate>What can I do content</div>
 <div translate>How?</div>
 <div translate>How content</div>
-<div translate>Library label</div>
-<div translate>Profile label</div>
-<div translate>Group label</div>
-<div translate>Class label</div>
-<div translate>Shape label</div>
-<div translate>Association label</div>
-<div translate>Attribute label</div>
 <div translate>of group</div>
 <div translate>of model</div>
 <div translate>of profile</div>
@@ -109,10 +84,6 @@
 <div translate>Use association</div>
 <div translate>Create and use attribute</div>
 <div translate>Create and use association</div>
-<div translate>Label</div>
-<div translate>Equivalent class</div>
-<div translate>Equivalent attribute</div>
-<div translate>Equivalent association</div>
 <div translate>Unauthorized</div>
 <div translate>ID is already in use</div>
 <div translate>Unexpected error</div>
@@ -133,11 +104,6 @@
 <div translate>Show excluded</div>
 <div translate>Concept</div>
 <div translate>Concept suggestion</div>
-<div translate>Broader concept</div>
-<div translate>Min count</div>
-<div translate>Max count</div>
-<div translate>Min length</div>
-<div translate>Max length</div>
 <div translate>application/ld+json</div>
 <div translate>text/turtle</div>
 <div translate>application/rdf+xml</div>
@@ -145,7 +111,6 @@
 <div translate>application/schema+json</div>
 <div translate>framed ld+json</div>
 <div translate>ld+json frame</div>
-<div translate>Pattern</div>
 <div translate>date format</div>
 <div translate>User login</div>
 <div translate>User name</div>
@@ -153,7 +118,6 @@
 <div translate>Modified at</div>
 <div translate>Member groups</div>
 <div translate>Admin groups</div>
-<div translate>Constraint description</div>
 <div translate>Add properties from super class</div>
 <div translate>Add properties from scope class</div>
 <div translate>Add properties from profile class</div>
@@ -174,38 +138,20 @@
 <div translate>Close</div>
 <div translate>Can be selected only from this library</div>
 <div translate>Can be selected only from this profile</div>
-<div translate>Description</div>
 <div translate>Maintenance</div>
 <div translate>Maintenance content</div>
-<div translate>Internal group page</div>
 <div translate>Subject</div>
-<div translate>Broader concept</div>
-<div translate>Definition</div>
 <div translate>to vocabulary</div>
 <div translate>Create new class</div>
 <div translate>Create new shape</div>
 <div translate>by referencing external uri</div>
-<div translate>External URI</div>
 <div translate>Create new attribute</div>
 <div translate>Create new association</div>
 <div translate>Self reference not allowed</div>
 <div translate>Invalid ID</div>
 <div translate>External class not found</div>
 <div translate>External predicate not found</div>
-<div translate>External predicate is of wrong type</div>
-<div translate>Property id</div>
-<div translate>Property label</div>
-<div translate>Predicate type</div>
-<div translate>Default value</div>
-<div translate>Allowed values</div>
+<div translate>External predicate is of wrong type</div>>
 <div translate>Input</div>
-<div translate>Fixed value</div>
-<div translate>Defined by</div>
-<div translate>Defined by library</div>
-<div translate>Defined by profile</div>
-<div translate>Homepage</div>
-<div translate>Title</div>
-<div translate>Concept id</div>
-<div translate>Concept label</div>
-<div translate>Vocabulary id</div>
+
 
