--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -153,5 +153,6 @@
 <div translate>External predicate not found</div>
 <div translate>External predicate is of wrong type</div>>
 <div translate>Input</div>
+<div translate>Required</div>
 
 
