Require label to titles

--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -19,6 +19,7 @@
 <div translate>Property label</div><div translate>Property label info</div>
 <div translate>Concept label</div><div translate>Concept label info</div>
 <div translate>Concept suggestion label</div><div translate>Concept suggestion label info</div>
+<div translate>Require label</div><div translate>Require label info</div>
 
 <div translate>State</div><div translate>State info</div>
 <div translate>Defined by</div><div translate>Defined by info</div>
