--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -144,9 +144,10 @@
 <div translate>to vocabulary</div>
 <div translate>Create new class</div>
 <div translate>Create new shape</div>
-<div translate>by referencing external uri</div>
+<div translate>Create new predicate</div>
 <div translate>Create new attribute</div>
 <div translate>Create new association</div>
+<div translate>by referencing external uri</div>
 <div translate>Self reference not allowed</div>
 <div translate>Invalid ID</div>
 <div translate>External class not found</div>
