Vocabulary selection to form data
Closes #388

--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -41,6 +41,7 @@
 
 <div translate>Internal group page</div><div translate>Internal group page info</div>
 
+<div translate>Vocabulary</div><div translate>Vocabulary info</div>
 <div translate>Namespace</div><div translate>Namespace info</div>
 <div translate>Prefix</div><div translate>Prefix info</div>
 
