Tolerate property as predicate type

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -30,6 +30,7 @@
 <div translate>class</div>
 <div translate>attribute</div>
 <div translate>association</div>
+<div translate>property</div>
 <div translate>data fi</div>
 <div translate>fi</div>
 <div translate>data en</div>
@@ -99,6 +100,7 @@
 <div translate>Shape information</div>
 <div translate>Attribute information</div>
 <div translate>Association information</div>
+<div translate>Property information</div>
 <div translate>Class properties</div>
 <div translate>Shape properties</div>
 <div translate>Show excluded</div>
