--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -28,6 +28,7 @@
 <div translate>Superclass</div><div translate>Superclass info</div>
 <div translate>Superassociation</div><div translate>Superassociation info</div>
 <div translate>Superattribute</div><div translate>Superattribute info</div>
+<div translate>Superproperty</div><div translate>Superproperty info</div>
 <div translate>Range</div><div translate>Range info</div>
 <div translate>Specialized from class</div><div translate>Specialized from class info</div>
 <div translate>Example</div><div translate>Example info</div>
@@ -37,6 +38,7 @@
 <div translate>Equivalent class</div><div translate>Equivalent class info</div>
 <div translate>Equivalent attribute</div><div translate>Equivalent attribute info</div>
 <div translate>Equivalent association</div><div translate>Equivalent association info</div>
+<div translate>Equivalent property</div><div translate>Equivalent property info</div>
 <div translate>Broader concept</div><div translate>Broader concept info</div>
 
 <div translate>Internal group page</div><div translate>Internal group page info</div>
