Differentiate property from class property in localizations

--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -6,6 +6,7 @@
 <div translate>Attribute id</div><div translate>Attribute id info</div>
 <div translate>Association id</div><div translate>Association id info</div>
 <div translate>Property id</div><div translate>Property id info</div>
+<div translate>Class property id</div><div translate>Class property id info</div>
 <div translate>Concept id</div><div translate>Concept id info</div>
 <div translate>Vocabulary id</div><div translate>Vocabulary id info</div>
 
@@ -17,6 +18,7 @@
 <div translate>Association label</div><div translate>Association label info</div>
 <div translate>Attribute label</div><div translate>Attribute label info</div>
 <div translate>Property label</div><div translate>Property label info</div>
+<div translate>Class property label</div><div translate>Class property label info</div>
 <div translate>Concept label</div><div translate>Concept label info</div>
 <div translate>Concept suggestion label</div><div translate>Concept suggestion label info</div>
 <div translate>Require label</div><div translate>Require label info</div>
