Allow filtering of assigned to current model, use it as default when selecting
Closes #390

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -157,5 +157,7 @@
 <div translate>External predicate is of wrong type</div>>
 <div translate>Input</div>
 <div translate>Required</div>
+<div translate>Assigned to this profile</div>
+<div translate>Assigned to this library</div>
 
 
