Languages selection to model view and allow language selection from that set

--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -60,6 +60,7 @@
 <div translate>Max length</div><div translate>Max length info</div>
 
 <div translate>Homepage</div><div translate>Homepage info</div>
+<div translate>Model languages</div><div translate>Model languages info</div>
 <div translate>Title</div><div translate>Title info</div>
 <div translate>External URI</div><div translate>External URI info</div>
 
