--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -31,10 +31,13 @@
 <div translate>attribute</div>
 <div translate>association</div>
 <div translate>property</div>
-<div translate>data fi</div>
 <div translate>fi</div>
-<div translate>data en</div>
 <div translate>en</div>
+<div translate>data language</div>
+<div translate>data fi</div>
+<div translate>data en</div>
+<div translate>data sv</div>
+<div translate>data ru</div>
 <div translate>Edit in progress</div>
 <div translate>Are you sure that you want to cancel edit?</div>
 <div translate>Confirm delete</div>
@@ -159,5 +162,6 @@
 <div translate>Required</div>
 <div translate>Assigned to this profile</div>
 <div translate>Assigned to this library</div>
+<div translate>language code</div>
 
 
