Class in added to property
Closes #398

--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -51,6 +51,7 @@
 
 <div translate>Default value</div><div translate>Default value info</div>
 <div translate>Allowed values</div><div translate>Allowed values info</div>
+<div translate>Class type</div><div translate>Class type info</div>
 <div translate>Fixed value</div><div translate>Fixed value info</div>
 <div translate>Pattern</div><div translate>Pattern info</div>
 <div translate>Min count</div><div translate>Min count info</div>
