Editorial note added to class, predicate and property
Closes #400

--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -1,5 +1,6 @@
 <div translate>Definition</div><div translate>Definition info</div>
 <div translate>Description</div><div translate>Description info</div>
+<div translate>Editorial note</div><div translate>Editorial note info</div>
 
 <div translate>Class id</div><div translate>Class id info</div>
 <div translate>Shape id</div><div translate>Shape id info</div>
