Hide internal vocabulary from references view
Closes #405

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -163,5 +163,6 @@
 <div translate>Assigned to this profile</div>
 <div translate>Assigned to this library</div>
 <div translate>language code</div>
+<div translate>Internal vocabulary</div>
 
 
