Common editableTable extracted, requires as editable table

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -164,5 +164,10 @@
 <div translate>Assigned to this library</div>
 <div translate>language code</div>
 <div translate>Internal vocabulary</div>
+<div translate>Remove</div>
+<div translate>Edit require</div>
+<div translate>Imported requires</div>
+<div translate>Technical namespaces</div>
+<div translate>None added</div>
 
 
