References as editable table

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -169,5 +169,8 @@
 <div translate>Imported requires</div>
 <div translate>Technical namespaces</div>
 <div translate>None added</div>
+<div translate>References</div>
+<div translate>Identifier</div>
+<div translate>Vocabulary name</div>
 
 
