Relations converted to editable table

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -172,5 +172,7 @@
 <div translate>References</div>
 <div translate>Identifier</div>
 <div translate>Vocabulary name</div>
+<div translate>Related resources</div>
+<div translate>Edit related resource</div>
 
 
