Adding, showing and removing of code schemes to implemented to UI

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -167,12 +167,20 @@
 <div translate>Remove</div>
 <div translate>Edit require</div>
 <div translate>Imported requires</div>
+<div translate>Add require</div>
 <div translate>Technical namespaces</div>
 <div translate>None added</div>
 <div translate>References</div>
+<div translate>Add reference</div>
 <div translate>Identifier</div>
 <div translate>Vocabulary name</div>
 <div translate>Related resources</div>
+<div translate>Add related resource</div>
 <div translate>Edit related resource</div>
+<div translate>Code schemes</div>
+<div translate>Add code scheme</div>
+<div translate>Search code schemes</div>
+<div translate>search code scheme</div>
+<div translate>Code scheme name</div>
 
 
