Show code values in code scheme search modal when scheme is selected

--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -68,3 +68,5 @@
 
 <div translate>Constraint classes</div><div translate>Constraint classes info</div>
 <div translate>Root class</div><div translate>Root class info</div>
+
+<div translate>Creator</div><div translate>Creator info</div>
