New code scheme creation implemented

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -182,5 +182,6 @@
 <div translate>Search code schemes</div>
 <div translate>search code scheme</div>
 <div translate>Code scheme name</div>
+<div translate>Create new code scheme</div>
 
 
