--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -10,6 +10,7 @@
 <div translate>Class property id</div><div translate>Class property id info</div>
 <div translate>Concept id</div><div translate>Concept id info</div>
 <div translate>Vocabulary id</div><div translate>Vocabulary id info</div>
+<div translate>Code scheme URI</div><div translate>Code scheme URI info</div>
 
 <div translate>Library label</div><div translate>Library label info</div>
 <div translate>Profile label</div><div translate>Profile label info</div>
@@ -23,6 +24,7 @@
 <div translate>Concept label</div><div translate>Concept label info</div>
 <div translate>Concept suggestion label</div><div translate>Concept suggestion label info</div>
 <div translate>Require label</div><div translate>Require label info</div>
+<div translate>Code scheme label</div><div translate>Code scheme label info</div>
 
 <div translate>State</div><div translate>State info</div>
 <div translate>Defined by</div><div translate>Defined by info</div>
