Code scheme editing modal

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -183,5 +183,6 @@
 <div translate>search code scheme</div>
 <div translate>Code scheme name</div>
 <div translate>Create new code scheme</div>
+<div translate>Edit code scheme</div>
 
 
