View code scheme modal

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -104,6 +104,7 @@
 <div translate>Attribute information</div>
 <div translate>Association information</div>
 <div translate>Property information</div>
+<div translate>Code scheme information</div>
 <div translate>Class properties</div>
 <div translate>Shape properties</div>
 <div translate>Show excluded</div>
