Code scheme selection component

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -178,6 +178,7 @@
 <div translate>Related resources</div>
 <div translate>Add related resource</div>
 <div translate>Edit related resource</div>
+<div translate>Code scheme</div>
 <div translate>Code schemes</div>
 <div translate>Add code scheme</div>
 <div translate>Search code schemes</div>
@@ -185,5 +186,6 @@
 <div translate>Code scheme name</div>
 <div translate>Create new code scheme</div>
 <div translate>Edit code scheme</div>
+<div translate>Choose code scheme</div>
 
 
