--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -187,5 +187,6 @@
 <div translate>Create new code scheme</div>
 <div translate>Edit code scheme</div>
 <div translate>Choose code scheme</div>
+<div translate>Write code</div>
 
 
