Base64 and hex data types
Closes #418

--- a/src/translations/attribute.html
+++ b/src/translations/attribute.html
@@ -35,3 +35,8 @@
 <div translate>xsd:gMonth error</div>
 <div translate>xsd:gDay</div>
 <div translate>xsd:gDay error</div>
+<div translate>xsd:hexBinary</div>
+<div translate>xsd:hexBinary error</div>
+<div translate>xsd:base64Binary</div>
+<div translate>xsd:base64Binary error</div>
+
