Add missing localization of 'of library'

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -71,6 +71,7 @@
 <div translate>How content</div>
 <div translate>of group</div>
 <div translate>of model</div>
+<div translate>of library</div>
 <div translate>of profile</div>
 <div translate>of class</div>
 <div translate>of shape</div>
