Browsing of concepts implemented, modifications are not submitted yet

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -189,5 +189,6 @@
 <div translate>Edit code scheme</div>
 <div translate>Choose code scheme</div>
 <div translate>Write code</div>
-
+<div translate>Browse concepts</div>
+<div translate>Search concept</div>
 
