--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -106,6 +106,8 @@
 <div translate>Association information</div>
 <div translate>Property information</div>
 <div translate>Code scheme information</div>
+<div translate>Concept information</div>
+<div translate>Concept suggestion information</div>
 <div translate>Class properties</div>
 <div translate>Shape properties</div>
 <div translate>Show excluded</div>
