Localize removing error message

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -91,6 +91,7 @@
 <div translate>Create and use association</div>
 <div translate>Unauthorized</div>
 <div translate>ID is already in use</div>
+<div translate>Resource dependencies restricts removing</div>
 <div translate>Unexpected error</div>
 <div translate>Not found</div>
 <div translate>Not removed</div>
