Localize and contextualize concept removal messages

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -194,4 +194,10 @@
 <div translate>Write code</div>
 <div translate>Browse concepts</div>
 <div translate>Search concept</div>
+<div translate>Delete concept</div>
+<div translate>Delete concept from this library</div>
+<div translate>Delete concept from this profile</div>
+<div translate>Delete conceptSuggestion</div>
+<div translate>Delete conceptSuggestion from this library</div>
+<div translate>Delete conceptSuggestion from this profile</div>
 
