Concept type filter

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -15,6 +15,7 @@
 <div translate>Draft</div>
 <div translate>Recommendation</div>
 <div translate>Deprecated</div>
+<div translate>Suggestion</div>
 <div translate>Show</div>
 <div translate>Hide</div>
 <div translate>Front page</div>
