Update localizations to match refactored names
Closes #426

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -107,7 +107,7 @@
 <div translate>Attribute information</div>
 <div translate>Association information</div>
 <div translate>Property information</div>
-<div translate>Code scheme information</div>
+<div translate>Reference data information</div>
 <div translate>Concept information</div>
 <div translate>Concept suggestion information</div>
 <div translate>Class properties</div>
@@ -137,8 +137,8 @@
 <div translate>Do you want to add following properties from scope class?</div>
 <div translate>Do you want to add following properties from profile class?</div>
 <div translate>Do you want to add following properties from external class?</div>
-<div translate>Not required by model</div>
-<div translate>Cannot require profile</div>
+<div translate>Not imported by model</div>
+<div translate>Cannot import profile</div>
 <div translate>Shapes are not allowed</div>
 <div translate>Classes are not allowed</div>
 <div translate>Non specialized classes are not allowed</div>
@@ -171,28 +171,28 @@
 <div translate>language code</div>
 <div translate>Internal vocabulary</div>
 <div translate>Remove</div>
-<div translate>Edit require</div>
-<div translate>Imported requires</div>
-<div translate>Add require</div>
+<div translate>Edit namespace</div>
+<div translate>Imported namespaces</div>
+<div translate>Import namespace</div>
 <div translate>Technical namespaces</div>
 <div translate>None added</div>
-<div translate>References</div>
-<div translate>Add reference</div>
+<div translate>Vocabularies</div>
+<div translate>Controlled vocabularies</div>
+<div translate>Add vocabulary</div>
 <div translate>Identifier</div>
 <div translate>Vocabulary name</div>
-<div translate>Related resources</div>
-<div translate>Add related resource</div>
-<div translate>Edit related resource</div>
-<div translate>Code scheme</div>
-<div translate>Code schemes</div>
-<div translate>Add code scheme</div>
-<div translate>Search code schemes</div>
-<div translate>search code scheme</div>
-<div translate>Code scheme name</div>
-<div translate>Create new code scheme</div>
-<div translate>Edit code scheme</div>
-<div translate>Choose code scheme</div>
-<div translate>Write code</div>
+<div translate>Links</div>
+<div translate>Add link</div>
+<div translate>Edit link</div>
+<div translate>Reference data</div>
+<div translate>Add reference data</div>
+<div translate>Search reference data</div>
+<div translate>search reference data</div>
+<div translate>Reference data name</div>
+<div translate>Create new reference data</div>
+<div translate>Edit reference data</div>
+<div translate>Choose reference data</div>
+<div translate>Write reference data code</div>
 <div translate>Browse concepts</div>
 <div translate>Search concept</div>
 <div translate>Delete concept</div>
