Stem input support

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -100,6 +100,8 @@
 <div translate>Resource is in use</div>
 <div translate>Already added</div>
 <div translate>Write identifier</div>
+<div translate>Write URI</div>
+<div translate>Write URL</div>
 <div translate>Library information</div>
 <div translate>Profile information</div>
 <div translate>Class information</div>
@@ -201,4 +203,5 @@
 <div translate>Delete conceptSuggestion</div>
 <div translate>Delete conceptSuggestion from this library</div>
 <div translate>Delete conceptSuggestion from this profile</div>
+<div translate>URI stem</div>
 
