Change frontpage layout to be more attractive to users (some things still need tweaking like the main image now in finnish only)

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -204,4 +204,5 @@
 <div translate>Delete conceptSuggestion from this library</div>
 <div translate>Delete conceptSuggestion from this profile</div>
 <div translate>URI stem</div>
+<div translate>Interoperability method description</div>
 
