Confirm and close modal when location changes while in modal

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -41,6 +41,8 @@
 <div translate>data ru</div>
 <div translate>Edit in progress</div>
 <div translate>Are you sure that you want to cancel edit?</div>
+<div translate>Dialog is open</div>
+<div translate>Are you sure that you want to close dialog?</div>
 <div translate>Confirm delete</div>
 <div translate>Are you sure that you want to delete?</div>
 <div translate>Add class</div>
