Toggle between three naming schemes

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -207,4 +207,6 @@
 <div translate>Delete conceptSuggestion from this profile</div>
 <div translate>URI stem</div>
 <div translate>Interoperability method description</div>
-
+<div translate>Label</div>
+<div translate>ID</div>
+<div translate>Local ID</div>
