Support delete confirmation of concept suggestion

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -80,6 +80,8 @@
 <div translate>of shape</div>
 <div translate>of association</div>
 <div translate>of attribute</div>
+<div translate>of concept</div>
+<div translate>of conceptSuggestion</div>
 <div translate>search attribute or association</div>
 <div translate>Add attribute</div>
 <div translate>Select attribute</div>
