UI language support configuration only in place

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -213,3 +213,4 @@
 <div translate>ID</div>
 <div translate>Local ID</div>
 <div translate>Allowed languages</div>
+<div translate>In language</div>
