--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -214,3 +214,4 @@
 <div translate>Local ID</div>
 <div translate>Allowed languages</div>
 <div translate>In language</div>
+<div translate>Undefined</div>
