Allow change of property reusable predicate
Closes #467

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -215,3 +215,4 @@
 <div translate>Allowed languages</div>
 <div translate>In language</div>
 <div translate>Undefined</div>
+<div translate>Change reusable predicate</div>
