Refactor subject/concept components

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -216,3 +216,6 @@
 <div translate>In language</div>
 <div translate>Undefined</div>
 <div translate>Change reusable predicate</div>
+<div translate>Defined in vocabularies</div>
+<div translate>Change concept</div>
+<div translate>Choose concept</div>
