Show editable entity errors is modal
Also renames submit error panel as error panel and submitError as excludeError in search modals.

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -219,3 +219,4 @@
 <div translate>Defined in vocabularies</div>
 <div translate>Change concept</div>
 <div translate>Choose concept</div>
+<div translate>Submit error</div>
