Allow change of unused predicate type
Closes #468

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -220,3 +220,7 @@
 <div translate>Change concept</div>
 <div translate>Choose concept</div>
 <div translate>Submit error</div>
+<div translate>Predicate in use</div>
+<div translate>Predicate type cannot be changed because it is already used by following resources</div>
+<div translate>Convert to association</div>
+<div translate>Convert to attribute</div>
