Add missing translation for shape concept change modal title

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -2,6 +2,7 @@
 
 <div translate>not found in the concept database</div>
 <div translate>Define concept for the class</div>
+<div translate>Define concept for the shape</div>
 <div translate>Define concept for the new class</div>
 <div translate>Define concept for the attribute</div>
 <div translate>Define concept for the new attribute</div>
