Confirmation for visualization positions save
Closes #491

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -46,6 +46,8 @@
 <div translate>Are you sure that you want to close dialog?</div>
 <div translate>Confirm delete</div>
 <div translate>Are you sure that you want to delete?</div>
+<div translate>Save visualization position</div>
+<div translate>Are you sure you want to save? Saving overrides previously saves positions.</div>
 <div translate>Add class</div>
 <div translate>Delete class</div>
 <div translate>Delete shape</div>
