More descriptive edit cancel modal
Closes #497

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -41,7 +41,7 @@
 <div translate>data sv</div>
 <div translate>data ru</div>
 <div translate>Edit in progress</div>
-<div translate>Are you sure that you want to cancel edit?</div>
+<div translate>Are you sure that you want to continue? By continuing unsaved changes will be lost.</div>
 <div translate>Dialog is open</div>
 <div translate>Are you sure that you want to close dialog?</div>
 <div translate>Confirm delete</div>
