Copy id to clipboard implemented
Closes #494

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -227,3 +227,5 @@
 <div translate>Predicate type cannot be changed because it is already used by following resources</div>
 <div translate>Convert to association</div>
 <div translate>Convert to attribute</div>
+<div translate>Copy "{{text}}" to clipboard</div>
+<div translate>Copied</div>
