Copy or assign unassigned predicate from property

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -219,6 +219,10 @@
 <div translate>In language</div>
 <div translate>Undefined</div>
 <div translate>Change reusable predicate</div>
+<div translate>Assign reusable predicate to library</div>
+<div translate>Assign reusable predicate to profile</div>
+<div translate>Copy reusable to library</div>
+<div translate>Copy reusable to profile</div>
 <div translate>Defined in vocabularies</div>
 <div translate>Change concept</div>
 <div translate>Choose concept</div>
@@ -229,3 +233,4 @@
 <div translate>Convert to attribute</div>
 <div translate>Copy "{{text}}" to clipboard</div>
 <div translate>Copied</div>
+<div translate>Copy</div>
