Enable copying predicate from only id or without known type

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -221,8 +221,10 @@
 <div translate>Change reusable predicate</div>
 <div translate>Assign reusable predicate to library</div>
 <div translate>Assign reusable predicate to profile</div>
-<div translate>Copy reusable to library</div>
-<div translate>Copy reusable to profile</div>
+<div translate>Copy reusable association to library</div>
+<div translate>Copy reusable association to profile</div>
+<div translate>Copy reusable attribute to library</div>
+<div translate>Copy reusable attribute to profile</div>
 <div translate>Defined in vocabularies</div>
 <div translate>Change concept</div>
 <div translate>Choose concept</div>
