--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -138,10 +138,12 @@
 <div translate>Modified at</div>
 <div translate>Member groups</div>
 <div translate>Admin groups</div>
+<div translate>Add properties from class</div>
 <div translate>Add properties from super class</div>
 <div translate>Add properties from scope class</div>
 <div translate>Add properties from profile class</div>
 <div translate>Add properties from external class</div>
+<div translate>Do you want to add following properties from class?</div>
 <div translate>Do you want to add following properties from super class?</div>
 <div translate>Do you want to add following properties from scope class?</div>
 <div translate>Do you want to add following properties from profile class?</div>
@@ -236,3 +238,5 @@
 <div translate>Copy "{{text}}" to clipboard</div>
 <div translate>Copied</div>
 <div translate>Copy</div>
+<div translate>Copy properties</div>
+<div translate>Copy properties from class</div>
