Notification of expired session

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -240,3 +240,5 @@
 <div translate>Copy</div>
 <div translate>Copy properties</div>
 <div translate>Copy properties from class</div>
+<div translate>Session expired</div>
+<div translate>Please login to perform the action</div>
