Library / profile custom namespace redirection
Closes #521

--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -67,6 +67,7 @@
 <div translate>Model languages</div><div translate>Model languages info</div>
 <div translate>Title</div><div translate>Title info</div>
 <div translate>External URI</div><div translate>External URI info</div>
+<div translate>Namespace redirection</div><div translate>Namespace redirection info</div>
 
 <div translate>Constraint classes</div><div translate>Constraint classes info</div>
 <div translate>Root class</div><div translate>Root class info</div>
