Duplicate association target localized

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -242,3 +242,4 @@
 <div translate>Copy properties from class</div>
 <div translate>Session expired</div>
 <div translate>Please login to perform the action</div>
+<div translate>Duplicate association target</div>
