--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -126,6 +126,7 @@
 <div translate>Concept suggestion</div>
 <div translate>application/ld+json</div>
 <div translate>text/turtle</div>
+<div translate>application/xml</div>
 <div translate>application/rdf+xml</div>
 <div translate>application/ld+json+context</div>
 <div translate>application/schema+json</div>
