Add missing translation

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -86,6 +86,7 @@
 <div translate>of concept</div>
 <div translate>of conceptSuggestion</div>
 <div translate>search attribute or association</div>
+<div translate>search class</div>
 <div translate>Add attribute</div>
 <div translate>Select attribute</div>
 <div translate>search attribute</div>
