Common search filter infra for search controllers
Closes #542

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -87,6 +87,11 @@
 <div translate>of conceptSuggestion</div>
 <div translate>search attribute or association</div>
 <div translate>search class</div>
+<div translate>search descriptions</div>
+<div translate>Search from concept database</div>
+<div translate>search namespace</div>
+<div translate>search vocabulary</div>
+<div translate>search reference data</div>
 <div translate>Add attribute</div>
 <div translate>Select attribute</div>
 <div translate>search attribute</div>
