Show subject in accordion panel

--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -23,6 +23,8 @@
 <div translate>Class property label</div><div translate>Class property label info</div>
 <div translate>Concept label</div><div translate>Concept label info</div>
 <div translate>Concept suggestion label</div><div translate>Concept suggestion label info</div>
+<div translate>Concept definition</div><div translate>Concept definition info</div>
+<div translate>Concept suggestion definition</div><div translate>Concept suggestion definition info</div>
 <div translate>Namespace label</div><div translate>Namespace label info</div>
 <div translate>Reference data label</div><div translate>Reference data label info</div>
 
