Support for boolean inputs in editable infra

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -250,3 +250,5 @@
 <div translate>Session expired</div>
 <div translate>Please login to perform the action</div>
 <div translate>Duplicate association target</div>
+<div translate>Yes</div>
+<div translate>No</div>
