Resource identifier settable to uri attributes
Closes #551

--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -54,6 +54,7 @@
 <div translate>Namespace</div><div translate>Namespace info</div>
 <div translate>Prefix</div><div translate>Prefix info</div>
 
+<div translate>Permanent identifier</div><div translate>Permanent identifier info</div>
 <div translate>Default value</div><div translate>Default value info</div>
 <div translate>Allowed values</div><div translate>Allowed values info</div>
 <div translate>Class type</div><div translate>Class type info</div>
