Add missing translations

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -252,3 +252,5 @@
 <div translate>Duplicate association target</div>
 <div translate>Yes</div>
 <div translate>No</div>
+<div translate>Show classes defined in profiles</div>
+<div translate>Match to content</div>
