Add localization key to misc to re-show commented out localization

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -254,3 +254,4 @@
 <div translate>No</div>
 <div translate>Show classes defined in profiles</div>
 <div translate>Match to content</div>
+<div translate>All types</div>
