Support for moving to previous when possible

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -1,5 +1,6 @@
 <div translate>Start help</div>
 <div translate>next</div>
+<div translate>previous</div>
 <div translate>close</div>
 <div translate>Class description info</div>
 <div translate>Diipadaa</div>
