Not found modal for various scenarios
Closes #566

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -248,6 +248,12 @@
 <div translate>Copy properties</div>
 <div translate>Copy properties from class</div>
 <div translate>Session expired</div>
+<div translate>Model not found</div>
+<div translate>Group not found</div>
+<div translate>Page not found</div>
+<div translate>Resource not found</div>
+<div translate>You will be redirected to the front page</div>
+<div translate>You will be redirected to the model</div>
 <div translate>Please login to perform the action</div>
 <div translate>Duplicate association target</div>
 <div translate>Yes</div>
