Start help from front page

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -4,3 +4,4 @@
 <div translate>close</div>
 <div translate>Class description info</div>
 <div translate>Diipadaa</div>
+<div translate>Select group</div>
