--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -5,3 +5,5 @@
 <div translate>Class description info</div>
 <div translate>Diipadaa</div>
 <div translate>Select group</div>
+<div translate>Guide through creating new library</div>
+<div translate>Select help topic</div>
