Notification of finished library creation

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -7,3 +7,4 @@
 <div translate>Select group</div>
 <div translate>Guide through creating new library</div>
 <div translate>Select help topic</div>
+<div translate>Congratulations for completing library creation!</div>
