Add missing translations

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -8,3 +8,8 @@
 <div translate>Guide through creating new library</div>
 <div translate>Select help topic</div>
 <div translate>Congratulations for completing library creation!</div>
+<div translate>Open library details</div>
+<div translate>Modify library</div>
+<div translate>Add reference to namespace</div>
+<div translate>Search for jhs</div>
+<div translate>Select jhs</div>
