Bind uniqueLang to property
Closes #573

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -261,3 +261,4 @@
 <div translate>Show classes defined in profiles</div>
 <div translate>Match to content</div>
 <div translate>All types</div>
+<div translate>Unique label</div>
