Confirmation before closing help on unwanted navigation

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -13,3 +13,5 @@
 <div translate>Add reference to namespace</div>
 <div translate>Search for jhs</div>
 <div translate>Select jhs</div>
+<div translate>Help is open</div>
+<div translate>Are you sure that you want to close help?</div>
