Profile creation help split from library creation

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -6,10 +6,13 @@
 <div translate>Diipadaa</div>
 <div translate>Select group</div>
 <div translate>Guide through creating new library</div>
+<div translate>Guide through creating new profile</div>
 <div translate>Select help topic</div>
 <div translate>Congratulations for completing library creation!</div>
+<div translate>Congratulations for completing profile creation!</div>
 <div translate>Open library details</div>
 <div translate>Modify library</div>
+<div translate>Modify profile</div>
 <div translate>Add reference to namespace</div>
 <div translate>Search for jhs</div>
 <div translate>Select jhs</div>
