--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -7,10 +7,13 @@
 <div translate>Select group</div>
 <div translate>Guide through creating new library</div>
 <div translate>Guide through creating new profile</div>
+<div translate>Guide through requiring a namespace</div>
 <div translate>Select help topic</div>
 <div translate>Congratulations for completing library creation!</div>
 <div translate>Congratulations for completing profile creation!</div>
+<div translate>Congratulations for completing namespace require!</div>
 <div translate>Open library details</div>
+<div translate>Open profile details</div>
 <div translate>Modify library</div>
 <div translate>Modify profile</div>
 <div translate>Add reference to namespace</div>
