Class specialization help

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -8,16 +8,22 @@
 <div translate>Guide through creating new library</div>
 <div translate>Guide through creating new profile</div>
 <div translate>Guide through requiring a namespace</div>
+<div translate>Guide through specializing a class</div>
 <div translate>Select help topic</div>
 <div translate>Congratulations for completing library creation!</div>
 <div translate>Congratulations for completing profile creation!</div>
 <div translate>Congratulations for completing namespace require!</div>
+<div translate>Congratulations for completing specialize class!</div>
 <div translate>Open library details</div>
 <div translate>Open profile details</div>
 <div translate>Modify library</div>
 <div translate>Modify profile</div>
 <div translate>Add reference to namespace</div>
 <div translate>Search for jhs</div>
+<div translate>Search for palvelu</div>
 <div translate>Select jhs</div>
+<div translate>Select palvelu</div>
+<div translate>Select properties</div>
 <div translate>Help is open</div>
 <div translate>Are you sure that you want to close help?</div>
+<div translate>Confirm selection</div>
