Require specific properties from add properties modal

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -23,7 +23,7 @@
 <div translate>Search for palvelu</div>
 <div translate>Select jhs</div>
 <div translate>Select palvelu</div>
-<div translate>Select properties</div>
+<div translate>Select name and description</div>
 <div translate>Help is open</div>
 <div translate>Are you sure that you want to close help?</div>
 <div translate>Confirm selection</div>
